--- a/public/views/personage_logic/view_personage.html
+++ b/public/views/personage_logic/view_personage.html
@@ -137,8 +137,8 @@
             <div class="menu-info-block">
                 <div class="left">
                     <div class="menu-info-block">
-                        <div class="example-buy-btn hidden-xs-down">
-                            <div class="btn expir btn-success-outline btn-rounded">
+                        <div class="hidden-xs-down">
+                            <div class="btn btn-success-outline btn-rounded">
                                 Права: {{player.Role.name}}
                             </div>
                         </div>
