--- a/public/views/personage_logic/view_personage.html
+++ b/public/views/personage_logic/view_personage.html
@@ -151,12 +151,13 @@
 
     <section class="page-content" ng-controller="personageController">
         <div class="panel">
-            <h3 class="panel-heading" style="padding-bottom: 0">
+            <h3 class="panel-heading" style="padding-bottom: 0; margin-bottom: 0">
                 <div class="dropdown">
                     <a class="dropdown-toggle color-primary" href="" data-toggle="dropdown" aria-expanded="false">
                         {{personage.name}}
                         <span class="ink animate"></span>
                     </a>
+                    <a class="btn btn-rounded btn-danger-outline margin-10" href="create_personage.html?id={{personage.id}}">Изменить!</a>
                     <ul class="dropdown-menu dropdown-animate" aria-labelledby="" role="menu">
                         <a class="dropdown-item" href="javascript: void(0)">Раса: {{personage.Race.name}}</a>
                         <a class="dropdown-item" href="javascript: void(0)">Возраст: {{personage.age}} лет</a>
