--- a/public/views/merits/merit.html
+++ b/public/views/merits/merit.html
@@ -152,7 +152,7 @@
         <section class="page-content">
             <div class="panel">
                 <div class="panel-heading">
-                    <h2 class="text-center">{{merit.name}}</h2>
+                    <h2 class="text-center"><a href="merit_manager.html" class="pull-left link-underlined link-blue"><i class="icmn-arrow-left2"></i> Назад</a>{{merit.name}}</h2>
                 </div>
 
                 <div class="panel-body margin-left-10" id="mainPanel">
