--- a/public/views/trigger_skills/trigger_skill.html
+++ b/public/views/trigger_skills/trigger_skill.html
@@ -151,7 +151,7 @@
         <section class="page-content">
             <div class="panel">
                 <div class="panel-heading">
-                    <h3 class="text-center">Уровни владения навыком "{{triggerSkill.name}}" <a
+                    <h3 class="text-center"><a href="trigger_skills_manager.html" class="pull-left link-underlined link-blue"><i class="icmn-arrow-left2"></i> Назад</a>Уровни владения навыком "{{triggerSkill.name}}" <a
                             ng-show="selectLevels != '{'" href="#" class="link-underlined link-blue"
                             ng-click="addLevel()">Добавить</a></h3>
                 </div>
