--- a/public/views/races/race.html
+++ b/public/views/races/race.html
@@ -155,7 +155,7 @@
         <section class="page-content">
             <div class="panel">
                 <div class="panel-heading" style="padding-bottom: 0">
-                    <h3 ng-show="hideEditBlock">{{race.name}}<a ng-click="hideEditBlock = false" class="btn btn-icon icmn-unlocked btn-link" href="javascript: void(0);"></a></h3>
+                    <h3 class="text-center" ng-show="hideEditBlock"><a href="race_manager.html" class="pull-left link-underlined link-blue"><i class="icmn-arrow-left2"></i> Назад</a>{{race.name}}<a ng-click="hideEditBlock = false" class="btn btn-icon icmn-unlocked btn-link" href="javascript: void(0);"></a></h3>
                     <div class="row" ng-hide="hideEditBlock">
                         <div class="input-group col-md-2">
                             <input id="raceName" class="form-control" type="text" ng-model="race.name" style="font-size: 20px">
