--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -170,7 +170,8 @@
                             <span style="cursor: pointer" ng-click="savePersonageName()" class="input-group-addon"><i
                                     class="icmn-lock4"></i> </span>
                         </div>
-                        <a ng-click="hideEditBlock = false" ng-show="hideEditBlock" class="btn btn-icon icmn-unlocked btn-link"
+                        <a ng-click="hideEditBlock = false" ng-show="hideEditBlock"
+                           class="btn btn-icon icmn-unlocked btn-link"
                            href="javascript: void(0);" style="box-shadow: 0 0"></a>
                         <ul class="dropdown-menu dropdown-animate" aria-labelledby="" role="menu">
                             <a class="dropdown-item" href="javascript: void(0)">Раса: {{personage.Race.name}}</a>
@@ -726,6 +727,7 @@
                                 <th class="mobile"></th>
                                 <th class="mobile">Значение</th>
                                 <th class="mobile"></th>
+                                <th class="mobile">Описание</th>
                             </tr>
                             </thead>
                             <tbody class="mobile">
@@ -806,6 +808,12 @@
                                         <div ng-if="item.personageAttachedSkill.AttachedSkill.default_skill">
                                             По умолчанию
                                         </div>
+                                    </div>
+                                </td>
+
+                                <td class="text-right mobile attached">
+                                    <div class="text-left">
+                                        {{item.attachedSkill.description}}
                                     </div>
                                 </td>
                             </tr>
@@ -1555,7 +1563,7 @@
                         </div>
                         <div ng-repeat="item in spellsBySchool" ng-hide="!item.added && !filter.schools">
                             <h3>{{item.school.name}}</h3>
-                            <table class="table table-hover mobile">
+                            <table class="table mobile">
                                 <thead class="mobile">
                                 <tr class="mobile">
                                     <th>Заклинание</th>
@@ -1571,11 +1579,12 @@
                                 <tbody class="mobile" ng-repeat="spellItem in item.spells | filter: spellSearch">
                                 <tr class="mobile" ng-hide="spellItem.personageSpell == null && addedSpellsFilter"
                                     ng-class="addDisableOrNotAddedClass(item.added, spellItem.personageSpell)">
-                                    <td class="text-right mobile spell">
+                                    <td class="text-right mobile spell" ng-click="showHideDescription(spellItem.spell.id)" style="cursor:pointer;">
                                         <div class="text-left">
-                                            <a class="link-underlined link-blue" href="javascript: void(0)"
-                                               ng-click="showHideDescription(spellItem.spell.id)">
+                                            <a class="link-underlined link-blue" href="javascript: void(0)">
                                                 {{spellItem.spell.name}}
+                                                <i class="fa fa-angle-double-down" ng-hide="isShowSpell(spellItem.spell.id)"></i>
+                                                <i class="fa fa-angle-double-up" ng-show="isShowSpell(spellItem.spell.id)"></i>
                                             </a>
                                         </div>
                                     </td>
@@ -1656,24 +1665,16 @@
                                         </div>
                                     </td>
                                 </tr>
-                                <tr ng-show="isShowSpell(spellItem.spell.id)">
-                                    <td colspan="7">
-                                        <ul>
-                                            <li style="list-style-type: none">
-                                                <strong>Эффект:</strong>
-                                                <div>{{spellItem.spell.effect}}</div>
-                                            </li>
-                                        </ul>
+                                <tr ng-show="isShowSpell(spellItem.spell.id)" style="border-bottom: none"
+                                    ng-class="addDisableOrNotAddedClass(item.added, spellItem.personageSpell)">
+                                    <td colspan="8">
+                                        <strong class="padding-left-10">Эффект:</strong> {{spellItem.spell.effect}}
                                     </td>
                                 </tr>
-                                <tr ng-show="isShowSpell(spellItem.spell.id)">
-                                    <td colspan="7">
-                                        <ul>
-                                            <li style="list-style-type: none">
-                                                <strong>Описание:</strong>
-                                                <div>{{spellItem.spell.description}}</div>
-                                            </li>
-                                        </ul>
+                                <tr ng-show="isShowSpell(spellItem.spell.id)"
+                                    ng-class="addDisableOrNotAddedClass(item.added, spellItem.personageSpell)">
+                                    <td colspan="8">
+                                        <strong class="padding-left-10">Описание:</strong> {{spellItem.spell.description}}
                                     </td>
                                 </tr>
                                 </tbody>
